try to handle the google login