@@ -2,37 +2,28 @@ package com.seooptimizer.backend.security;
 
 import java.io.IOException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 
 import org.springframework.security.core.Authentication;
-import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
 import org.springframework.stereotype.Component;
 
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import lombok.RequiredArgsConstructor;
 
 @Component
-@RequiredArgsConstructor
 public class OAuth2SuccessHandler implements AuthenticationSuccessHandler {
 
-    private final JwtUtil jwtUtil;
+    private final String frontendUrl = "https://ai-optimizer-beta.vercel.app/oauth-success"; // replace if needed
 
     @Override
-    public void onAuthenticationSuccess(HttpServletRequest request,
-                                        HttpServletResponse response,
-                                        Authentication authentication)
-            throws IOException, ServletException {
+    public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response,
+                                        Authentication authentication) throws IOException, ServletException {
 
-        OAuth2User oAuth2User = (OAuth2User) authentication.getPrincipal();
-        String email = oAuth2User.getAttribute("email");
+        var oauthUser = (org.springframework.security.oauth2.core.user.DefaultOAuth2User) authentication.getPrincipal();
+        String jwt = (String) oauthUser.getAttributes().get("jwt");
 
-        String token = jwtUtil.generateAccessToken(email);
-
-        String redirectUrl = "http://localhost:3000/oauth2/success?token=" +
-                URLEncoder.encode(token, StandardCharsets.UTF_8);
+        String redirectUrl = frontendUrl + "?token=" + URLEncoder.encode(jwt, "UTF-8");
 
         response.sendRedirect(redirectUrl);
     }
